تم تعديل الكود وإضافة ميزات جديدة

--- a/project_flutter_api_2/project_flutter_api_2/pubspec.yaml
+++ b/project_flutter_api_2/project_flutter_api_2/pubspec.yaml
@@ -79,6 +79,7 @@ flutter:
      - assets/1738180083508.png
      - assets/1738180083517.png
      - assets/1738248793050.png
+     - assets/klipartz.com.png
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
